--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "format:check": "npm run prettier -- --check",
     "lint": "npm run format:check",
     "test": "lerna run test",
-    "prepare": "npm run compile"
+    "prepare": "npm run compile",
+    "build": "npm run compile"
   },
   "devDependencies": {
     "lerna": "4.0.0",
@@ -16,6 +17,7 @@
     "typescript": "4.4.3"
   },
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "apps/*"
   ]
 }
