--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "npm run compile"
   },
   "devDependencies": {
-    "lerna": "4.0.0",
+    "lerna": "^4.0.0",
     "prettier": "2.4.1",
     "typescript": "4.4.3"
   },
