fix: Setting workspace into working state

--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,9 @@
 {
   "packages": [
-    "packages/*"
+    "packages/*",
+    "apps/*"
   ],
   "npmClient": "npm",
-  "version": "independent"
+  "version": "independent",
+  "useWorkspaces": true
 }
