--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -17,6 +17,7 @@
     "build": "npm run clean && tsc -p ./tsconfig.build.json"
   },
   "dependencies": {
+    "@esss-swap/duo-localisation": "^1.1.15",
     "fast-safe-stringify": "^2.1.1",
     "gelf-pro": "^1.3.5"
   },
