--- a/packages/message-broker/package.json
+++ b/packages/message-broker/package.json
@@ -24,6 +24,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@esss-swap/duo-localisation": "^1.1.15",
     "@esss-swap/duo-logger": "^1.1.2",
     "@types/amqplib": "^0.5.13",
     "amqplib": "^0.7.1"
