--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "npm-ts-workspaces-example",
   "private": true,
   "scripts": {
-    "build": "lerna run build"
+    "build": "lerna run build",
+    "dev": "lerna run dev",
+    "version": "lerna version --conventional-commits --yes"
   },
   "devDependencies": {
     "lerna": "^4.0.0",
